--- a/john-pettersson.html
+++ b/john-pettersson.html
@@ -2,30 +2,39 @@
 
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
-</head>
-<body>
-    <h1>John Pettersson</h1>
-    
-    <img src="bo.jpg" alt="Johns katt"width="500">
+    <head>
+        <meta charset='utf-8'>
+        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+        <title>John Pettersson</title>
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
+        <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+        <script src='main.js'></script>
+        <style>
+            div {
+                width: 800px;
+                margin: auto;
+            }
+        </style>
+    </head>
+    <body>
+        <div>            
+            <h1>John Pettersson</h1>
+            
+            <img src="bo.jpg" alt="Johns katt"width="500">
 
 
-    <h1>4 saker jag är bra på</h1>
-    <ul>
-        <li>Köra truck</li>
-        <li>Spela gitarr</li>        
-        <li>Korsord</li>
-        <li>Rocket League</li>
-    </ul>
+            <h1>4 saker jag är bra på</h1>
+            <ul>
+                <li>Köra truck</li>
+                <li>Spela gitarr</li>        
+                <li>Korsord</li>
+                <li>Rocket League</li>
+            </ul>
 
-    <p><a href="https://github.com/johnpettersson">github.com/johnpettersson</a>
+            <p><a href="https://github.com/johnpettersson">github.com/johnpettersson</a>
 
-    <p><a href="index.html">Tillbaka till kontakt</a>
-</body>
+            <p><a href="index.html">Tillbaka till kontakt</a>
+
+        </div>
+    </body>
 </html>
