--- a/john-pettersson.html
+++ b/john-pettersson.html
@@ -10,15 +10,22 @@
         <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
         <script src='main.js'></script>
         <style>
+            body {
+                background-color: rgb(249, 252, 255);
+            }
             div {
-                width: 800px;
+                width: 500px;
                 margin: auto;
+            }
+
+            img {
+                border-radius: 2.5%;
             }
         </style>
     </head>
     <body>
         <div>            
-            <h1>John Pettersson</h1>
+            <h1 style="text-align: center; font-size: 2.5em;">John Pettersson</h1>
             
             <img src="bo.jpg" alt="Johns katt"width="500">
 
@@ -33,7 +40,7 @@
 
             <p><a href="https://github.com/johnpettersson">github.com/johnpettersson</a>
 
-            <p><a href="index.html">Tillbaka till kontakt</a>
+            <p><a href="index.html">Tillbaka till kontakt</a></p>
 
         </div>
     </body>
