Ännu mer små ändringar i style

--- a/john-pettersson.html
+++ b/john-pettersson.html
@@ -21,6 +21,10 @@
             img {
                 border-radius: 2.5%;
             }
+
+            .tcenter {
+                text-align: center;
+            }
         </style>
     </head>
     <body>
@@ -30,17 +34,21 @@
             <img src="bo.jpg" alt="Johns katt"width="500">
 
 
-            <h1>4 saker jag är bra på</h1>
-            <ul>
-                <li>Köra truck</li>
-                <li>Spela gitarr</li>        
-                <li>Korsord</li>
-                <li>Rocket League</li>
-            </ul>
+            <div style="padding: 20px;">
+                <h1>4 saker jag är bra på</h1>
+                    
+                <ul>
+                    <li>Köra truck</li>
+                    <li>Spela gitarr</li>        
+                    <li>Lösa Korsord</li>
+                    <li>Missa höga bollar i Rocket League</li>
+                </ul>
+            </div>
 
-            <p><a href="https://github.com/johnpettersson">github.com/johnpettersson</a>
-
-            <p><a href="index.html">Tillbaka till kontakt</a></p>
+            <div style="text-align: center;">
+                <p>Github: <a target="_blank" href="https://github.com/johnpettersson">johnpettersson</a>            
+                <p><a href="index.html">Tillbaka till kontakt</a></p>
+            </div>
 
         </div>
     </body>
