Sista ändringarna i style nu, jag lovar

--- a/john-pettersson.html
+++ b/john-pettersson.html
@@ -25,6 +25,10 @@
             .tcenter {
                 text-align: center;
             }
+
+            a, a:visited {
+                color: rgb(0, 0, 255);
+            }
         </style>
     </head>
     <body>
