Adjusted Homepage & Own Website

--- a/Matilda-Soderberg.html
+++ b/Matilda-Soderberg.html
@@ -3,20 +3,31 @@
 <head>
     <link rel="icon" href='https://seeklogo.com/images/V/valorant-logo-3D72D9117F-seeklogo.com.png'>
 <style>
+    a:link {
+        color:White;
+
+    }
+    a:visited {
+        color:White;
+    }
         body {
-             background-image: url('https://images.unsplash.com/photo-1526374965328-7f61d4dc18c5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y29kZSUyMGJhY2tncm91bmR8ZW58MHx8MHx8&w=1000&q=80');
+             background-image: url('https://images.unsplash.com/photo-1542831371-29b0f74f9713?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8Y29kaW5nfGVufDB8fDB8fA%3D%3D&w=1000&q=80');
             background-attachment: fixed;
             background-size: cover; 
         }
         h1 {
-            color:green;
+            text-align: center;
         }
         div {
             color:dodgerblue;
+
         }
         p
         {
-            text-align: right;
+            position:absolute;
+            Top: 8px;
+            left: 16px;
+            font-size:20;
         }
 </style>
     <meta charset="UTF-8">
@@ -37,7 +48,7 @@
     <li>Träna</li> </b></ul>
 <p>
     <a id="link" href="https://github.com/Tillsxp"> GitHub Profil</a>
-    <br>
+    
     <a href="https://github.com/Tillsxp/kontaktbok-6.git">  Startsida</a>
 </p>
 </div>
