--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="https://www.freepnglogos.com/uploads/games-png/games-controller-game-icon-17.png">
+<style>
+    body{
+        background-color:Black;
+    }
+    
+</style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kontaktboklistasak</title>
 </head>
 <body>
-    <h1>Kontakter</h1>
-    <u1>
+    <div>
+    <h1 style="color:dodgerblue">Hackaton project</h1>
+    <p style ="color:dodgerblue">Vi är fyra personer och här är lite fakta om oss alla.</p>
+    <h2 style = "color:dodgerblue">Kontakter</h4>
+    <u1 style ="color:dodgerblue">
         <li>Kontakt 1</li>
         <li>Kontakt 2</li>
         <li>Kontakt 3</li>
         <li>Kontakt 4</li>
-    </u1>    
+    </u1>
+</div>    
 </body>
 </html>
