--- a/Simon.html
+++ b/Simon.html
@@ -4,49 +4,53 @@
 <head>
     <title>Simon</title>
     <style>
-        .mydiv 
-        {
+        .header {
+            padding: 60px;
             text-align: center;
-                        
+            /*background: #085d88;*/
+            background-image: linear-gradient(to bottom right, rgb(7, 125, 72), rgb(13, 52, 138));
+            color: white;
+            font-size: 30px;            
         }
-        ul.myUL 
-        {
+
+        .mydiv {
+            text-align: center;
+
+        }
+
+        ul.myUL {
             display: inline-block;
             text-align: left;
         }
-        img 
-        {
+
+        img {
             display: block;
             margin-left: auto;
             margin-right: auto;
         }
-        #grad1
-        {
-            background-image: linear-gradient(to bottom right, rgb(4, 64, 37), rgb(3, 19, 53), rgb(55, 3, 3));
-            background-attachment: fixed;
-        }
     </style>
 </head>
 
-<!--body style="background-color: black;"-->
-<body id="grad1">
+<body>
+
+    <div class="header">
+        <h1>Simon Jonsson</h1>
+    </div>
 
     <div class="mydiv">
 
-        <h1 style="color: DodgerBlue;">Simon</h1>
-
-            <img src="ME.jpg" with="500" height="500">
+        <img src="ME.png" with="500" height="500">
 
 
-            <ul style="color: DodgerBlue;" class="myUL">
-                <li>Rikta aluminium</li>
-                <li>Styrketräning</li>
-                <li>Cam Program</li>
-                <li>Rollspel</li>
-            </ul><br>
+        <ul style="color: DodgerBlue;" class="myUL">
+            <li>Rikta aluminium</li>
+            <li>Styrketräning</li>
+            <li>Cam Program</li>
+            <li>Rollspel</li>
+        </ul><br>
 
-            <a href="https://github.com/Behemoth39">GitHub</a><br>
-            <a href="">------</a>
+        <a href="https://github.com/Behemoth39">GitHub</a><br>
+        <a href=""></a>
 
     </div>
 </body>
