--- a/Simon.html
+++ b/Simon.html
@@ -50,7 +50,7 @@
         </ul><br>
 
         <a href="https://github.com/Behemoth39">GitHub</a><br>
-        <a href=""></a>
+        <a href="index.html"></a>
 
     </div>
 </body>
