--- a/Simon.html
+++ b/Simon.html
@@ -42,7 +42,7 @@
         <img src="ME.png" with="500" height="500">
 
 
-        <ul style="color: DodgerBlue;" class="myUL">
+        <ul style="color: rgb(0, 0, 0);" class="myUL">
             <li>Rikta aluminium</li>
             <li>Styrketräning</li>
             <li>Cam Program</li>
