--- a/Simon.html
+++ b/Simon.html
@@ -28,10 +28,13 @@
             margin-left: auto;
             margin-right: auto;
         }
+        #grad1{
+            background-color: silver;
+        }
     </style>
 </head>
 
-<body>
+<body id="grad1">
 
     <div class="header">
         <h1>Simon Jonsson</h1>
