--- a/jonathan.html
+++ b/jonathan.html
@@ -23,7 +23,7 @@
             <a href="https://github.com/Sleepy-Koala">Min GitHub-profil</a> 
             <br>
             <br>
-            <a href="index.html">Tillbaka till kontakt</a>
+            <a href="index.html">Tillbaka till kontakt</a><!-- hej-->
         </div>
     </div>
 </body>
