--- a/Simon.html
+++ b/Simon.html
@@ -6,16 +6,17 @@
     <style>
         .header {
             padding: 60px;
-            text-align: center;
-            /*background: #085d88;*/
-            background-image: linear-gradient(to bottom right, rgb(7, 125, 72), rgb(13, 52, 138));
+            text-align: center;            
+            background-image: linear-gradient(to bottom right, rgb(0, 180, 180), rgb(0, 50, 150));
             color: white;
-            font-size: 30px;            
+            font-size: 40px;            
         }
 
         .mydiv {
-            text-align: center;
-
+            /*display: flex;*/
+            align-items: right;
+            justify-content: right;
+            font-size: 20px;
         }
 
         ul.myUL {
@@ -23,18 +24,18 @@
             text-align: left;
         }
 
-        img {
-            display: block;
-            margin-left: auto;
+        img {            
+            margin-left: 55%;
             margin-right: auto;
-        }
-        #grad1{
-            background-color: silver;
-        }
+        }        
+        body {
+            background-image: url('Banner.jpg');
+            background-repeat: no-repeat;            
+        }           
     </style>
 </head>
 
-<body id="grad1">
+<body>
 
     <div class="header">
         <h1>Simon Jonsson</h1>
@@ -53,7 +54,7 @@
         </ul><br>
 
         <a href="https://github.com/Behemoth39">GitHub</a><br>
-        <a href="index.html"></a>
+        <a href="index.html">Hemsida</a>
 
     </div>
 </body>
