--- a/Matilda-Soderberg.html
+++ b/Matilda-Soderberg.html
@@ -3,6 +3,13 @@
 <head>
     <link rel="icon" href='https://seeklogo.com/images/V/valorant-logo-3D72D9117F-seeklogo.com.png'>
 <style>
+    .listor {
+        text-align: center;
+    }
+    ul {
+        text-align: left;
+        display: inline-block;
+    }
     a:link {
         color:White;
 
@@ -19,7 +26,7 @@
             text-align: center;
         }
         div {
-            color:dodgerblue;
+            color:white;
 
         }
         p
@@ -40,16 +47,18 @@
 <body>
     <div>
 <h1> Matilda Söderberg</h1>
-
-<ul><b>Fyra saker jag är bra på:
-    <li>Struktuerad</li>
-    <li>Lyhörd</li>
-    <li>Spela Valo/Cs</li>
-    <li>Träna</li> </b></ul>
+<div class ="listor">
+    <ul><b>Hej! <br>
+    Fyra saker som jag är bra på:
+    <li>Ordningsam</li>
+    <li>Lyssnar</li>
+    <li>Dataspel</li>
+    <li>Träning</li> </b></ul>
+</div>
 <p>
     <a id="link" href="https://github.com/Tillsxp"> GitHub Profil</a>
     
-    <a href="https://github.com/Tillsxp/kontaktbok-6.git">  Startsida</a>
+    <a href="index.html">Startsida</a>
 </p>
 </div>
 </body>
