--- a/Jonathan.html
+++ b/Jonathan.html
@@ -12,18 +12,21 @@
 <body>
     <header>Jonathan Andersson</header>
     <div id="wrapper">
-        <div>
+        <div class="main">
+            <h1>Fyra saker jag är bra på</h1>
             <ul>
-                <li>Tycker om att prova nya utmaningar</li>
+                <li>Anta nya utmaningar</li>
+                <br>
                 <li>Resa</li>
+                <br>
                 <li>Laga mat</li>
+                <br>
                 <li>Spela piano</li>
             </ul>
         
             <a href="https://github.com/Sleepy-Koala">Min GitHub-profil</a> 
             <br>
-            <br>
-            <a href="index.html">Tillbaka till kontakt</a><!-- hej-->
+            <a href="index.html">Tillbaka till kontakt</a>
         </div>
     </div>
 </body>
