--- a/Jonathan.html
+++ b/Jonathan.html
@@ -17,11 +17,11 @@
             <ul>
                 <li>Anta nya utmaningar</li>
                 <br>
-                <li>Resa</li>
+                <li>Att se människor runt omkring mig</li>
                 <br>
-                <li>Laga mat</li>
+                <li>Att uppskatta även de små sakerna i livet</li>
                 <br>
-                <li>Spela piano</li>
+                <li>Koka soppa på en spik</li>
             </ul>
         
             <a href="https://github.com/Sleepy-Koala">Min GitHub-profil</a> 
