--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <h2 style = "color:dodgerblue">Kontakter</h4>
         <u1 style ="color:dodgerblue">
         <li>Simon Jonsson : </li>
-        <li>John Petterson : </li>
-        <li>Jonathan Andersson : </li>
-        <li>Matilda Söderberg : </li>
+        <li><a href="john-pettersson.html">John Petterson</a></li>
+        <li><a href="Jonathan.html">Jonathan Anderrson</a></li>
+        <li><a href="Matilda-Soderberg.html">Matilda Soderberg</a></li>
     </u1>
 </div>    
 </body>
