--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </nav> <br>
         <h2 style = "color:dodgerblue">Kontakter</h4>
         <u1 style ="color:dodgerblue">
-        <li><a href="Simon.html"></a></li>
+        <li><a href="Simon.html">Simon Jonsson</a></li>
         <li><a href="john-pettersson.html">John Petterson</a></li>
         <li><a href="Jonathan.html">Jonathan Anderrson</a></li>
         <li><a href="Matilda-Soderberg.html">Matilda Soderberg</a></li>
